Updated the navbar styling and fixed layout issues

--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,8 @@
 #navbar {
     background-color: rgb(6 109 214 / 83%);
     padding: 5px;
+    display: flex;
+    justify-content: space-between;
 }
 
 #logo {
